--- a/TM.RestHour/Views/CrewHealth/MedicalTreatment.cshtml
+++ b/TM.RestHour/Views/CrewHealth/MedicalTreatment.cshtml
@@ -19,17 +19,18 @@
         <div class="col-md-8 bacmt">
 
             @*<div class="col-md-4" style="padding-left:0;">
-                    <div class="form-group">
-                        <label for="selectCrew" class="control-label">Select Crew</label><br />
-                        @Html.DropDownListFor(model => model.Crew.ID, (IEnumerable<SelectListItem>)ViewBag.Crew, "Select", new { @class = "form-control", @id = "ddlCrew" })
-                    </div>
-                </div>*@
+            <div class="form-group">
+                <label for="selectCrew" class="control-label">Select Crew</label><br />
+                @Html.DropDownListFor(model => model.Crew.ID, (IEnumerable<SelectListItem>)ViewBag.Crew, "Select", new { @class = "form-control", @id = "ddlCrew" })
+            </div>
+        </div>*@
             <div class="clearfix"></div>
             <div class="row">
 
                 <div class="col-md-4">
                     <img src="~/background/HumanBody.jpg" style="width: 100%; float: right;" />
-                        <a href="@Url.Action("HumanBody", "CrewHealth")" class="button1">Go to the Image</a>
+                    @*<a href="@Url.Action("HumanBody", "CrewHealth")" class="button1">Go to the Image</a>*@
+                    <button type="button" class="button1" style="float: right; right: 25px;" data-toggle="modal" data-target="#myModal" onclick="openBody();">Go to the Image</button><br /><br />
                 </div>
 
                 <div class="col-md-4" style="border: 1px solid #eee; padding: 10px;">
@@ -164,64 +165,82 @@
             </div>
 
 
+            @*//////////////////////////////////////////////////////////////////////////////////////////////////*@
+            @*<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog" style="width: 903px;">
+                <div class="modal-content">
 
 
+
+
+
+                </div>
+            </div>
+        </div>*@
+
+        <script>
+            function openBody() {
+                window.open("@Url.Action("TestBody", "CrewHealth")");
+            }
+        </script>
+
+            @*/////////////////////////////////////////////////////////////////////////////////////////////////////*@
 
             @*<div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="1">Problem or Symptoms</label>
-                                    <textarea class="form-control" id="Problem" cols="7" rows="2"></textarea>
-                                </div>
+                        <div class="form-group">
+                            <label for="1">Problem or Symptoms</label>
+                            <textarea class="form-control" id="Problem" cols="7" rows="2"></textarea>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="2">Medical Diagnosis</label>
+                            <textarea class="form-control" id="MedicalDiagnosis" cols="7" rows="2"></textarea>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="3">Medical Advice</label>
+                            <textarea class="form-control" id="MedicalAdvice" cols="7" rows="2"></textarea>
+
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="3">Treatment So Far</label>
+                            <textarea class="form-control" id="TreatmentSoFar" cols="7" rows="2"></textarea>
+
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+
+                        <div class="">
+
+                            <div>
+                                @using (Html.BeginForm("MedicalTreatment", "Equipments", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                    {
+                        <span style="font-size:20px;">Medical Reports:</span>
+                        <br />
+                        <input type="file" name="postedFile" />
+                        <br />
+                        <input type="submit" value="Upload" class="button1" />
+                        <br /><br />
+                        <span style="color:green">@ViewBag.Message</span>
+        }
                             </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="2">Medical Diagnosis</label>
-                                    <textarea class="form-control" id="MedicalDiagnosis" cols="7" rows="2"></textarea>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="3">Medical Advice</label>
-                                    <textarea class="form-control" id="MedicalAdvice" cols="7" rows="2"></textarea>
-
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="3">Treatment So Far</label>
-                                    <textarea class="form-control" id="TreatmentSoFar" cols="7" rows="2"></textarea>
-
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-
-                                <div class="">
-
-                                    <div>
-                                        @using (Html.BeginForm("MedicalTreatment", "Equipments", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                            {
-                                <span style="font-size:20px;">Medical Reports:</span>
-                                <br />
-                                <input type="file" name="postedFile" />
-                                <br />
-                                <input type="submit" value="Upload" class="button1" />
-                                <br /><br />
-                                <span style="color:green">@ViewBag.Message</span>
-                }
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
+                        </div>
+                    </div>
+                    <div class="col-md-4">
 
 
 
-                                <form action="../" onsubmit="return checkCheckBoxes(this);">
+                        <form action="../" onsubmit="return checkCheckBoxes(this);">
 
-                                    <p style="margin-top:25%;"><input type="Submit" class="button1" value="Sent Email"></p>
-                                </form>
+                            <p style="margin-top:25%;"><input type="Submit" class="button1" value="Sent Email"></p>
+                        </form>
 
 
-                            </div>*@
+                    </div>*@
 
 
             <div class="row" style="border: 1px solid #eee; padding: 10px;">
@@ -253,20 +272,20 @@
 
 
 
-                              Always consult promptly CIRM, as well as in cases of injury or pathological egregious, even for all those symptoms that apparently insignificant, may evolve into pathological complexes. Operating room
-                              <br />
-                            <strong>  INFORMATION TO BE PROVIDED BY A REQUEST FOR MEDICAL ASSISTANCE ADDRESSED TO C.I.R.M.
-                             </strong>
-                                <br />
-                              Name of vessel and radio call sign. <br />
-                              Location of ship, port of departure and destination, estimated time of arrival, route and speed. <br />
-                              Patient's age, nationality, qualification. <br />
-                              Respiratory rate, pulse, temperature and if possible blood pressure. <br />
-                              Symptomatology, location and type of pain, as well as all relevant information relating to the disease. <br />
-                              In case of injury, in addition to the symptoms, you should indicate where and how the accident. <br />
-                              Medical history of the patient. <br />
-                              Medicines available on board. <br />
-                              Medicine products already administered. <br />*@
+                      Always consult promptly CIRM, as well as in cases of injury or pathological egregious, even for all those symptoms that apparently insignificant, may evolve into pathological complexes. Operating room
+                      <br />
+                    <strong>  INFORMATION TO BE PROVIDED BY A REQUEST FOR MEDICAL ASSISTANCE ADDRESSED TO C.I.R.M.
+                     </strong>
+                        <br />
+                      Name of vessel and radio call sign. <br />
+                      Location of ship, port of departure and destination, estimated time of arrival, route and speed. <br />
+                      Patient's age, nationality, qualification. <br />
+                      Respiratory rate, pulse, temperature and if possible blood pressure. <br />
+                      Symptomatology, location and type of pain, as well as all relevant information relating to the disease. <br />
+                      In case of injury, in addition to the symptoms, you should indicate where and how the accident. <br />
+                      Medical history of the patient. <br />
+                      Medicines available on board. <br />
+                      Medicine products already administered. <br />*@
 
                     </p>
                 </div>
