--- a/TM.RestHour/Views/help/index.cshtml
+++ b/TM.RestHour/Views/help/index.cshtml
@@ -223,21 +223,6 @@
                     </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
@@ -431,15 +416,6 @@
                     </div>
 
 
-
-
-
-
-
-
-
-
-
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
@@ -510,6 +486,42 @@
                         </div>
                     </div>
 
+                    @***************************** Snehasish Photo Upload Help ******************************@
+                    @******************************************************************************************@
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseCIRM">CIRM</a>
+                            </h4>
+                        </div>
+                        <div id="collapseCIRM" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <p><strong>1.</strong> To tag a human body for ailment positions we have to select the menu from Well Being -> Crew Health -> CIRM and click on <strong>Go to the image </strong>button.</p>
+                                <img src="~/background/CIRM1.png" style="width: 100%; float: right;" width="42" height="300" />
+                                <p><strong>2.</strong> After clicking on the <strong>Go to the image </strong>button a new tab opens up  with a human graphics with four buttons - </p>
+                                <p><strong>a.</strong> Add dot</p>
+                                <p><strong>b.</strong> Rotate</p>
+                                <p><strong>c.</strong> Save</p>
+                                <p><strong>d.</strong> Close</p>
+                                <img src="~/background/CIRM2.png" style="width: 100%; float: right;" width="42" height="300" />
+                                
+                                <p><strong>3. Add dots</strong> button :</p>
+                                <p>Clicking on this button creates a text box  with a red dot connected by a line.  User can rag the line to the selected body part and tag the image. If the user wants more tags , he needs to click the <strong>"Add dots"</strong> button again.</p>
+                                <img src="~/background/CIRM3.png" style="width: 100%; float: right;" width="42" height="300" />
+                                
+                                <p><strong>4. Rotate</strong> button :</p>
+                                <p>By clicking on the <strong>"Rotate" </strong>button you can rotate the image for different postures of human body.</p>
+                                <img src="~/background/CIRM4.png" style="width: 100%; float: right;" width="42" height="300" />
+                                
+                                <p><strong>5. Save</strong> button :</p>
+                                <p>Once tagging is completed for a single image user can click the <strong>"Save"</strong> button  and a new image is saved with existing tags.</p>
+                                <img src="~/background/CIRM5.png" style="width: 100%; float: right;" width="42" height="300" />
+                                
+                                <p><strong>6. Close</strong> button :</p>
+                                <p>To close the page.</p>
+                            </div>
+                        </div>
+                    </div>
 
 
                 </div>
