--- a/TM.RestHour/Views/CrewHealth/TestBody.cshtml
+++ b/TM.RestHour/Views/CrewHealth/TestBody.cshtml
@@ -200,7 +200,7 @@
                 html2canvas(document.querySelector("#element")).then(canvas => {
                     //document.body.appendChild(canvas)
                     Canvas2Image.saveAsImage(canvas);
-                    deleteTag(document.querySelector("#element"));
+                    //deleteTag(document.querySelector("#element"));
                 });
 
                 //$('#myform').submit();
