--- a/TM.RestHour/Views/Login/ResetPasswordNew.cshtml
+++ b/TM.RestHour/Views/Login/ResetPasswordNew.cshtml
@@ -1,9 +1,10 @@
-﻿
+﻿@*@{
+        ViewBag.Title = "ResetPasswordNew";
+    }*@
+
 @{
-    ViewBag.Title = "ResetPasswordNew";
+    Layout = null;
 }
-
-
 
 <script src="~/Scripts/Login.js"></script>
 
@@ -32,7 +33,7 @@
 <body style="background-image: url(../background/password.jpg);
     background-size: cover;">
 
-    <div class="row">
+    <div style="width:50%; float: right;" class="row">
         <div class="col-md-4">
             <h2 class="ta" style="color:#000;">Reset Password</h2>
         </div>
@@ -48,7 +49,7 @@
                     </div>
 
                     <div class="">
-                        <div class="card1">
+                        <div style="width:50%;" class="card1">
 
                             @*<div class="form-group">
                                     <label for="Name">Name</label>
@@ -84,11 +85,11 @@
 </body>
 
 <script type="text/javascript">
-                function confirmPass() {
-                    var pass = document.getElementById("NewPassword").value
-                    var confPass = document.getElementById("ConfirmNewPassword").value
-                    if (pass != confPass) {
-                        alert('Wrong confirm password !');
-                    }
-                }
+    function confirmPass() {
+        var pass = document.getElementById("NewPassword").value
+        var confPass = document.getElementById("ConfirmNewPassword").value
+        if (pass != confPass) {
+            alert('Wrong confirm password !');
+        }
+    }
 </script>
