--- a/TM.RestHour/Views/Login/Index.cshtml
+++ b/TM.RestHour/Views/Login/Index.cshtml
@@ -13,7 +13,7 @@
 }
 
 
-
+    <script src="~/Scripts/jquery-3.2.1.min.js"></script>
 
 @using (Html.BeginForm())
 {
@@ -60,6 +60,7 @@
 
     <body class="page-login pace-done back">
 
+        @Html.Hidden("ForgetPassword", @Url.Action("ResetPasswordOfID", "Login"))
 
         <div class="page-inner">
             <div id="main-wrapper">
@@ -88,24 +89,24 @@
 
 
                                 @*<div class="form-group">
-            @Html.DropDownListFor(model => model.ID, (IEnumerable<SelectListItem>)ViewBag.Vessel, "Select", new { @class = "form-control" })
-        </div>*@
+                                    @Html.DropDownListFor(model => model.ID, (IEnumerable<SelectListItem>)ViewBag.Vessel, "Select", new { @class = "form-control" })
+                                </div>*@
                                 @*<div class="remember">
 
-            <label class="container">
-                Remember me
-                <input type="checkbox">
-                <span class="checkmark"></span>
-            </label>
+                                    <label class="container">
+                                        Remember me
+                                        <input type="checkbox">
+                                        <span class="checkmark"></span>
+                                    </label>
 
-            @*<p style="float:right; font-size:12px; color:#fff;">Forgot Password?</p>
-        </div>*@
+                                    @*<p style="float:right; font-size:12px; color:#fff;">Forgot Password?</p>
+                                </div>*@
                                 <div class="clearfix"></div>
                                 <div class="" style="margin: 0 auto;text-align: center; margin-right: 51px;">
                                     <input type="submit" class="btn btn-success" id="btnAdd" value="LOGIN" style="width:40%;" />
                                 </div>
                                 @*<input type="submit" class="btn btn-danger reg" value="REGISTER VESSEL" />*@
-                                <a href="Login/ResetPasswordNew" style="color:red" class="text-center m-t-md text-sm">Forgot Password?</a>
+                                @Html.ActionLink("Forgot Password?", "ResetPasswordOfID", "Login", new { @style = "color:red", @class="text-center m-t-md text-sm"})
                                 @*<p class="text-center m-t-xs text-sm">Do not have an account?</p>*@
                                 @*<a href="register.html" class="btn btn-default btn-block m-t-md">Create an account</a>*@
                             </div>
@@ -185,8 +186,8 @@
 @Scripts.Render("~/bundles/modernizr")
 @Scripts.Render("~/bundles/jqueryval")
 
-
-
+@Scripts.Render("~/bundles/jqueryui")
+@Styles.Render("~/Content/themes/base/css")
 
 
 
