--- a/TM.RestHour/Views/Login/ResetPasswordOfID.cshtml
+++ b/TM.RestHour/Views/Login/ResetPasswordOfID.cshtml
@@ -142,112 +142,119 @@
 @using (Html.BeginForm())
 {
 	@Html.AntiForgeryToken() // this is for prevent CSRF attack
+	@Html.ValidationSummary(true)
+	if (@ViewBag.Message != null)
+	{
 
-<body class="page-login pace-done" style="background:#F1F4F9;">
+		<div class="divclass"><p style="margin:0;"><strong>  @ViewBag.Message</strong></p> </div>
+	}
 
-	<div class="row" style="width:80%;">
-		<div style="width:50%; float: left;" class="col-md-6">
-		</div>
-		<div>
-			&nbsp;
-			&nbsp;
-			&nbsp;
-		</div>
-		<div>
-			&nbsp;
-			&nbsp;
-			&nbsp;
-		</div>
-		<div>
-			&nbsp;
-			&nbsp;
-			&nbsp;
-		</div>
-		<div>
-			&nbsp;
-			&nbsp;
-			&nbsp;
-		</div>
-		<div>
-			&nbsp;
-			&nbsp;
-			&nbsp;
-		</div>
-		<div>
-			&nbsp;
-			&nbsp;
-			&nbsp;
-		</div>
-		<div>
-			&nbsp;
-			&nbsp;
-			&nbsp;
-		</div>
-		<div>
-			&nbsp;
-			&nbsp;
-			&nbsp;
-		</div>
-		<div>
-			&nbsp;
-			&nbsp;
-			&nbsp;
-		</div>
-		<div>
-			&nbsp;
-			&nbsp;
-			&nbsp;
-		</div>
-		<div style="margin-left: 620px; height:30%;" class="col-md-6 bac">
-			<div class="">
 
-				<div style="margin:0 auto" class="tablecontainer">
-					@Html.Hidden("UpdateResetPassword", @Url.Action("UpdateResetPassword", "Login"))
-					<input type="hidden" id="hdncount" />
-					<input type="hidden" id="hdnrole" />
-					<div class="">
-						<form>
-							<div class="form-group">
-								<input type="hidden" id="ID" />
-							</div>
-							<h2 class="ta" style="color:#000;">Update Reset Password</h2>
-							<div class="card">
-								<a href="index.html" class="logo-name text-lg text-center">Username</a>
-								<div class="col-md-4">
-									<div class="form-group" style="width:50%;">
-										@Html.TextBoxFor(a => a.Users.Username)
-										@Html.ValidationMessageFor(a => a.Users.Username)
-									</div>
-									<div>
-										&nbsp;
-										&nbsp;
-										&nbsp;
-									</div>
-									<input type="submit" class="button1" id="btnAdd" value="Update Password" style="width:130px; float: left;" />
+	<body class="page-login pace-done" style="background:#F1F4F9;">
+
+		<div class="row" style="width:80%;">
+			<div style="width:50%; float: left;" class="col-md-6">
+			</div>
+			<div>
+				&nbsp;
+				&nbsp;
+				&nbsp;
+			</div>
+			<div>
+				&nbsp;
+				&nbsp;
+				&nbsp;
+			</div>
+			<div>
+				&nbsp;
+				&nbsp;
+				&nbsp;
+			</div>
+			<div>
+				&nbsp;
+				&nbsp;
+				&nbsp;
+			</div>
+			<div>
+				&nbsp;
+				&nbsp;
+				&nbsp;
+			</div>
+			<div>
+				&nbsp;
+				&nbsp;
+				&nbsp;
+			</div>
+			<div>
+				&nbsp;
+				&nbsp;
+				&nbsp;
+			</div>
+			<div>
+				&nbsp;
+				&nbsp;
+				&nbsp;
+			</div>
+			<div>
+				&nbsp;
+				&nbsp;
+				&nbsp;
+			</div>
+			<div>
+				&nbsp;
+				&nbsp;
+				&nbsp;
+			</div>
+			<div style="margin-left: 620px; height:30%;" class="col-md-6 bac">
+				<div class="">
+
+					<div style="margin:0 auto" class="tablecontainer">
+						@Html.Hidden("UpdateResetPassword", @Url.Action("UpdateResetPassword", "Login"))
+						<input type="hidden" id="hdncount" />
+						<input type="hidden" id="hdnrole" />
+						<div class="">
+							<form>
+								<div class="form-group">
+									<input type="hidden" id="ID" />
 								</div>
-							</div>
-						</form>
+								<h2 class="ta" style="color:#000;">Update Reset Password</h2>
+								<div class="card">
+									<a href="index.html" class="logo-name text-lg text-center">Username</a>
+									<div class="col-md-4">
+										<div class="form-group" style="width:50%;">
+											@Html.TextBoxFor(a => a.Users.Username , new { @required  = "required"})
+											@Html.ValidationMessageFor(a => a.Users.Username)
+										</div>
+										<div>
+											&nbsp;
+											&nbsp;
+											&nbsp;
+										</div>
+										<input type="submit" class="btn btn-success" id="btnAdd" value="Update Password" style="width:130px; float: left;" />
+									</div>
+								</div>
+							</form>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			@section Scripts
+				@section Scripts
 {
-				@Scripts.Render("~/bundles/jqueryval")
-				@Scripts.Render("~/bundles/jqueryui")
-				@Styles.Render("~/Content/themes/base/css")
+					@Scripts.Render("~/bundles/jqueryval")
+					@Scripts.Render("~/bundles/jqueryui")
+					@Styles.Render("~/Content/themes/base/css")
 
 
-				<script type="text/javascript">
-					$(document).ready(function () {
+					<script type="text/javascript">
+						$(document).ready(function () {
 
-					});
-				</script>
-			}
+						});
+					</script>
+				}
+			</div>
 		</div>
-	</div>
 
-</body>
+	</body>
 
 
 
