--- a/TM.RestHour/Views/CrewHealth/MedicalHistory.cshtml
+++ b/TM.RestHour/Views/CrewHealth/MedicalHistory.cshtml
@@ -17,6 +17,8 @@
 <script src="~/Scripts/CrewHealth.js"></script>
 
 @Html.Hidden("loaddata", @Url.Action("LoadData", "CrewHealth"))
+@*@Html.Hidden("loaddatareport", @Url.Action("LoadData", "CrewHealth"))*@
+@Html.Hidden("loadprintreport", @Url.Action("LoadData2", "CrewHealth"))
 
 <style>
     .bac {
@@ -50,36 +52,62 @@
             <h2 class="ta" style="color:#000;">Medical History</h2>
         </div>
 
-       
-                <div class="col-md-6 bac1" style="width: 67%;">
-                    <div class="card">
-                        <div style="margin:0 auto" class="tablecontainer">
-                            <input type="hidden" id="hdnrole" />
-                            <table id="CrewHealthtable" class="display" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr>
-                                        <th>Crew Name</th>
-                                        <th>Weight(Kg)</th>
-                                        <th>BMI</th>
-                                        @*<th>BP</th>*@
-                                        <th>BS Level</th>
-                                        <th>Sys(mmHg)</th>
-                                        <th>Dia(mmHg)</th>
-                                        <th>UrineTest</th>
-                                        <th>Unannounced Alcohol</th>
-                                        <th>Annual D&H</th>
-                                        <th>Month</th>
 
-                                    </tr>
-                                </thead>
-                            </table>
-                        </div>
-                    
+
+        <div class="col-md-6 bac1" style="width: 67%;">
+            <div class="col-md-6" id="sideform">
+                <button type="button" class="button1" id="btnPrint" @*disabled="disabled"*@>Print Report</button>
+            </div>
+            <div class="card">
+                <div style="margin:0 auto" class="tablecontainer">
+                    <input type="hidden" id="hdnrole" />
+                    <table id="CrewHealthtable" class="display" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th>Crew Name</th>
+                                <th>Weight(Kg)</th>
+                                <th>BMI</th>
+                                @*<th>BP</th>*@
+                                <th>BS Level</th>
+                                <th>Sys(mmHg)</th>
+                                <th>Dia(mmHg)</th>
+                                <th>UrineTest</th>
+                                <th>Unannounced Alcohol</th>
+                                <th>Annual D&H</th>
+                                <th>Month</th>
+
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+
+
+                <div id="dvprint2" style="display:none;">
+                    <hr>
+                    <table id="certtable_print" class="display" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th align="left">Crew Name</th>
+                                <th align="left">Weight(Kg)</th>
+                                <th align="left">BMI</th>
+
+                                <th align="left">BS Level</th>
+                                <th align="left">Sys(mmHg)</th>
+                                <th align="left">Dia(mmHg)</th>
+                                <th align="left">UrineTest</th>
+                                <th align="left">Unannounced Alcohol</th>
+                                <th align="left">Annual D&H</th>
+                                <th align="left">Month</th>
+                            </tr>
+                        </thead>
+                    </table>
+
+                </div>
+
             </div>
         </div>
     </div>
 </body>
-
 
 @section Scripts
 {
@@ -87,18 +115,27 @@
     @Scripts.Render("~/bundles/jqueryui")
     @Styles.Render("~/Content/themes/base/css")
 
-    <script src="~/Scripts/toastr.min.js"></script>
-    <link href="~/Content/toastr.min.css" rel="stylesheet" />
+
+    <script src="~/Scripts/pdfmake.min.js"></script>
+    <script src="~/Scripts/vfs_fonts.js"></script>
+    <script src="~/Scripts/CrewHealth.js"></script>
 
     <script type="text/javascript">
-        //alert('hi');
+
 
         $(document).ready(function () {
-
+            //SetUpGridReport();
             SetUpGrid();
-
+            SetUpPrintGridReport();
         });
 
-    </script>
 
+
+
+        $("#btnPrint").click(function () {
+            Popup2('');
+        });
+
+
+    </script>
 }
