--- a/TM.RestHour/Views/CrewHealth/JoiningMedicalReport.cshtml
+++ b/TM.RestHour/Views/CrewHealth/JoiningMedicalReport.cshtml
@@ -89,7 +89,7 @@
                                 </div>
                                 <div class="export-template-label" style="display:inline-block;float: right; margin-right: 13px;">
                                     <a href="../../MedicalHistory/Medical Fermin.pdf" target="_self" download>
-                                        <img src="#" alt="Download Medical History" style="float:left;" class="button1">
+                                        <img src="#" alt="Download Joining Medical" style="float:left;" class="button1">
                                     </a>
                                 </div>
                             </div>
